--- a/AutoClicker/plugin.yml
+++ b/AutoClicker/plugin.yml
@@ -3,7 +3,9 @@ version: 1.0.0B
 api: [3.0.0]
 main: Raphael\Hit\Blaze
 author: Raphael S.
-
+commands:
+    autoclicker:
+        description: Hite mobs automaticamente!
 # Feito por Raphael S. 
 # Discord: https://www.blazehosting.com.br/discord
 # https://github.com/Raphael1S/AutoClicker
